# scout_ros2

./: README.md
pro/: CMakeLists.txt  package.xml
pro/launch/: display.launch  gazebo.launch
pro/urdf/: pro.csv  pro.urdf
scout_base/include/scout_base/: scout_base_ros.hpp  scout_messenger.hpp
scout_base/src/: scout_base_ros.cpp
scout_description/: CMakeLists.txt  package.xml
scout_description/config/: diff_drive_controller.yaml  scout_controller.yaml
scout_description/launch/: display_scout_mini.launch  scout_mini.launch.py
scout_description/meshes/: box_link_simplified.STL
scout_description/meshes/box-parts/: box.stl  camera.stl  lidar.stl  monitor.stl
scout_description/rviz/: scout_mini_model_display.rviz
scout_description/urdf/: mini.xacro  scout_mini.gazebo  scout_mini.urdf  scout_mini.xacro  scout_mini_wheel.xacro  scout_mini_wheel_1.xacro  scout_mini_wheel_2.xacro  scout_mini_wheel_3.xacro  scout_mini_wheel_4.xacro  sensors.gazebo  sim.gazebo  wheel.xacro
