<?xml version="1.0"?>
<package>
  <name>pro</name>
  <version>0.0.0</version>
  <description>pro robot</description>

  <maintainer email="dev@null.localhost">devnull</maintainer>

  <license>BSD</license>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!-- <run_depend>lms1xx</run_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
